# gvox-cli

./: CMakeLists.txt  phantom_mansion.gvox_u32_palette  vcpkg-configuration.json  vcpkg.json
cmake/: packaging.cmake
src/: main.cpp
